--- a/style.css
+++ b/style.css
@@ -35,7 +35,10 @@ h1 {
 
 .result {
     background-color: #e6d168;
-    width: 18%;
+    max-width: 500px;
+    max-height: 400px;
+    padding: 10px;
+    width: auto;
     height: auto;
     padding: 5px;
     border-radius: 8px;
